--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1385,6 +1385,9 @@
     <ClCompile Include="UVa\200\260.cpp">
       <Filter>UVa\200</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11369.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
