--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1601,6 +1601,9 @@
     <ClCompile Include="UVa\10000\10036.cpp">
       <Filter>UVa\10000</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\10200\10226.cpp">
+      <Filter>UVa\10200</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
