--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1613,6 +1613,9 @@
     <ClCompile Include="UVa\600\679.cpp">
       <Filter>UVa\600</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\300\353.cpp">
+      <Filter>UVa\300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
