--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1631,6 +1631,9 @@
     <ClCompile Include="UVa\13100\13141.cpp">
       <Filter>UVa\13100</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\13100\13180.cpp">
+      <Filter>UVa\13100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
