--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1658,6 +1658,9 @@
     <ClCompile Include="Euler\1\31.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\8.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
