--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1661,6 +1661,9 @@
     <ClCompile Include="Euler\1\8.cpp">
       <Filter>Euler\1</Filter>
     </ClCompile>
+    <ClCompile Include="Euler\1\12.cpp">
+      <Filter>Euler\1</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
