--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -1859,6 +1859,9 @@
     <ClCompile Include="UVa\800\846.cpp">
       <Filter>UVa\800</Filter>
     </ClCompile>
+    <ClCompile Include="UVa\11300\11349.cpp">
+      <Filter>UVa\11300</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
