--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2063,6 +2063,9 @@
     <ClCompile Include="Codeforces\200\200\200B.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\130\131A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
