--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2075,6 +2075,9 @@
     <ClCompile Include="Codeforces\400\460\469A.cpp">
       <Filter>Codeforces\400</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\900\970\977A.cpp">
+      <Filter>Codeforces\900</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
