--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2087,6 +2087,9 @@
     <ClCompile Include="Codeforces\200\280\282A.cpp">
       <Filter>Codeforces\200</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\100\110\112A.cpp">
+      <Filter>Codeforces\100</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
