--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2090,6 +2090,9 @@
     <ClCompile Include="Codeforces\100\110\112A.cpp">
       <Filter>Codeforces\100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\600\650\659A.cpp">
+      <Filter>Codeforces\600</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
