--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2093,6 +2093,9 @@
     <ClCompile Include="Codeforces\600\650\659A.cpp">
       <Filter>Codeforces\600</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1040\1047A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
