--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2096,6 +2096,9 @@
     <ClCompile Include="Codeforces\1000\1040\1047A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1090\1096A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
