--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2105,6 +2105,9 @@
     <ClCompile Include="Codeforces\1100\1130\1136A.cpp">
       <Filter>Codeforces\1100</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1060\1064A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
