--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2108,6 +2108,9 @@
     <ClCompile Include="Codeforces\1000\1060\1064A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\1000\1060\1065A.cpp">
+      <Filter>Codeforces\1000</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
