--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -2117,6 +2117,9 @@
     <ClCompile Include="Codeforces\1000\1080\1088A.cpp">
       <Filter>Codeforces\1000</Filter>
     </ClCompile>
+    <ClCompile Include="Codeforces\800\850\855A.cpp">
+      <Filter>Codeforces\800</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
